<resources>
    <string name="app_name">AppCoreFeatures</string>

    <string name="material_design">Material Design</string>
    <string name="contained">Contained</string>
    <string name="outline">Outline</string>
    <string name="text">Text</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
</resources>