<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaterialDesignExampleActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_example_outline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/Widget.Core.CardView.OutlinedCardView"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Core.MediumComponent.Cut.Top"
        android:layout_margin="@dimen/grid_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card_example_simple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guide_example_vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Core.CircleImageView"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_gravity="center"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_example_simple"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Core.MediumComponent.Cut"
        app:cardElevation="@dimen/plane_04"
        app:cardBackgroundColor="?attr/colorPrimary"
        android:layout_margin="@dimen/grid_3"
        app:layout_constraintTop_toBottomOf="@id/card_example_outline"
        app:layout_constraintBottom_toTopOf="@id/guide_example_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guide_example_vertical"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_example_check"
        android:layout_width="0dp"
        android:layout_height="140dp"
        style="@style/Widget.Core.CardView.CheckedCardView"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Core.MediumComponent.Round.Bottom"
        android:layout_margin="@dimen/grid_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_example_vertical">

        <com.google.android.material.slider.Slider
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_example_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@integer/guide_percent_50"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_example_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@integer/guide_percent_50"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_all_divider_0_5"
        android:background="@color/color_on_surface_divider"
        android:layout_marginHorizontal="@dimen/grid_2"
        app:layout_constraintTop_toBottomOf="@id/guide_example_btn"
        app:layout_constraintStart_toStartOf="parent"/>

   <LinearLayout
       android:id="@+id/linear_example_sample1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginVertical="@dimen/grid_1"
       app:layout_constraintTop_toBottomOf="@id/guide_example_btn"
       app:layout_constraintStart_toStartOf="parent">

       <com.google.android.material.button.MaterialButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/Widget.MaterialComponents.Button.Icon"
           android:text="@string/contained"
           app:icon="@drawable/v_favorite"
           android:layout_marginHorizontal="@dimen/grid_1"/>

       <com.google.android.material.button.MaterialButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/Widget.Core.Button.OutlinedButton.WithIcon"
           android:text="@string/outline"
           app:icon="@drawable/v_favorite"
           android:layout_marginHorizontal="@dimen/grid_1"/>

       <com.google.android.material.button.MaterialButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/Widget.MaterialComponents.Button.TextButton"
           android:text="@string/text"
           android:layout_marginHorizontal="@dimen/grid_1"/>

   </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_example_sample2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="@dimen/grid_1"
        app:layout_constraintTop_toBottomOf="@id/linear_example_sample1"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contained"
            android:layout_marginEnd="@dimen/grid_2"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Core.Button.OutlinedButton"
            android:text="@string/outline"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup1_example_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:checkedButton="@id/btn_fav"
        android:layout_marginVertical="@dimen/grid_1"
        app:layout_constraintTop_toBottomOf="@id/linear_example_sample2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Core.Button.OutlinedButton.WithIcon"
            android:text="@string/button1"
            app:icon="@drawable/v_favorite" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Core.Button.OutlinedButton.WithIcon"
            android:text="@string/button2"
            app:icon="@drawable/v_music" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup2_example_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        android:layout_marginVertical="@dimen/grid_1"
        app:layout_constraintTop_toBottomOf="@id/toggleGroup1_example_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Core.Button.OutlinedButton"
            android:text="@string/button1" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Core.Button.OutlinedButton"
            android:text="@string/button2" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Core.Button.OutlinedButton"
            android:text="@string/button3" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:checkedButton="@id/fav"
        android:layout_marginVertical="@dimen/grid_1"
        app:layout_constraintTop_toBottomOf="@id/toggleGroup2_example_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Core.Button.OutlinedButton.IconOnly"
            app:icon="@drawable/v_favorite" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Core.Button.OutlinedButton.IconOnly"
            app:icon="@drawable/v_cart" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Core.Button.OutlinedButton.IconOnly"
            app:icon="@drawable/v_music" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>